deploy: b2311864edc31d04ee956a093a40b2922a06205c

--- a/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-failures.html
+++ b/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-failures.html
@@ -127,7 +127,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">2:3.617</span>
+  <span class="lead-duration duration">2:4.289</span>
 
 
   <span data-toggle="collapse" class=" collapsable-control" data-target="#element-1">
@@ -165,7 +165,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">BeforeActions.setUp(Scenario)</span>
 
-  <span class="lead-duration duration">1.618</span>
+  <span class="lead-duration duration">1.751</span>
 
           </div>
 
@@ -202,7 +202,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">Open Datafusion Project to configure pipeline</span>
 
-  <span class="lead-duration duration">3.771</span>
+  <span class="lead-duration duration">3.772</span>
 
 </div>
 
@@ -239,7 +239,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.186</span>
+  <span class="lead-duration duration">0.200</span>
 
           </div>
 
@@ -276,7 +276,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">Source is GCS bucket</span>
 
-  <span class="lead-duration duration">0.182</span>
+  <span class="lead-duration duration">0.215</span>
 
 </div>
 
@@ -313,7 +313,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.201</span>
+  <span class="lead-duration duration">0.221</span>
 
           </div>
 
@@ -350,7 +350,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">Target is BigQuery</span>
 
-  <span class="lead-duration duration">0.181</span>
+  <span class="lead-duration duration">0.201</span>
 
 </div>
 
@@ -387,7 +387,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.200</span>
+  <span class="lead-duration duration">0.212</span>
 
           </div>
 
@@ -424,7 +424,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">Link Source and Sink to establish connection</span>
 
-  <span class="lead-duration duration">2.341</span>
+  <span class="lead-duration duration">2.347</span>
 
 </div>
 
@@ -461,7 +461,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.187</span>
+  <span class="lead-duration duration">0.195</span>
 
           </div>
 
@@ -498,7 +498,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">Enter the GCS Properties with <span class="argument">&quot;@TC-Demo-1_GCS&quot;</span> GCS bucket</span>
 
-  <span class="lead-duration duration">13.765</span>
+  <span class="lead-duration duration">14.074</span>
 
 </div>
 
@@ -535,7 +535,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.157</span>
+  <span class="lead-duration duration">0.165</span>
 
           </div>
 
@@ -548,13 +548,13 @@ $(document).ready(function() {
   <div class="embedding indention">
     <div data-toggle="collapse" data-target="#embedding-13" class="collapsable-control">
       <a>Attachment 1 (png)</a>
-      <a href="embeddings/embedding_222971209.png" download target="_blank">
+      <a href="embeddings/embedding_-1545531278.png" download target="_blank">
         <span class="download-button glyphicon glyphicon-download-alt"></span>
       </a>
     </div>
     <div id="embedding-13" class="collapse collapsable-details ">
       <div class="embedding-content">
-        <img src="embeddings/embedding_222971209.png">
+        <img src="embeddings/embedding_-1545531278.png">
       </div>
     </div>
   </div>
@@ -572,7 +572,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">Close the GCS Properties</span>
 
-  <span class="lead-duration duration">0.143</span>
+  <span class="lead-duration duration">0.151</span>
 
 </div>
 
@@ -609,7 +609,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.196</span>
+  <span class="lead-duration duration">0.203</span>
 
           </div>
 
@@ -646,7 +646,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">Enter the BigQuery Properties for table <span class="argument">&quot;tableDemo&quot;</span></span>
 
-  <span class="lead-duration duration">1:43.229</span>
+  <span class="lead-duration duration">1:43.524</span>
 
 </div>
 
@@ -672,11 +672,11 @@ Caused by: org.openqa.selenium.NoSuchElementException: no such element: Unable t
   (Session info: headless chrome=92.0.4515.159)
 For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
 Build info: version: '4.0.0-rc-1', revision: 'bc5511cbda'
-System info: host: 'runner-deployment-build-e2e-cdapio-65d7f4cfcc-b429j', ip: '10.116.13.6', os.name: 'Linux', os.arch: 'amd64', os.version: '5.4.144+', java.version: '1.8.0_292'
+System info: host: 'runner-deployment-build-e2e-cdapio-65d7f4cfcc-bbmsp', ip: '10.116.12.6', os.name: 'Linux', os.arch: 'amd64', os.version: '5.4.144+', java.version: '1.8.0_292'
 Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [3f8531f7dee41b75e2aa5a368c88bb44, findElement {using=xpath, value=//*[@data-cy='plugin-validation-success-msg']}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 92.0.4515.159, chrome: {chromedriverVersion: 92.0.4515.107 (87a818b10553..., userDataDir: /tmp/.com.google.Chrome.EYqvgu}, goog:chromeOptions: {debuggerAddress: localhost:40897}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: LINUX, platformName: LINUX, proxy: Proxy(), se:cdp: ws://localhost:40897/devtoo..., se:cdpVersion: 92.0.4515.159, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 3f8531f7dee41b75e2aa5a368c88bb44
+Command: [99c48df0ed8d2b436804e473adf8a381, findElement {using=xpath, value=//*[@data-cy='plugin-validation-success-msg']}]
+Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 92.0.4515.159, chrome: {chromedriverVersion: 92.0.4515.107 (87a818b10553..., userDataDir: /tmp/.com.google.Chrome.ngFb5a}, goog:chromeOptions: {debuggerAddress: localhost:46023}, javascriptEnabled: true, networkConnectionEnabled: false, pageLoadStrategy: normal, platform: LINUX, platformName: LINUX, proxy: Proxy(), se:cdp: ws://localhost:46023/devtoo..., se:cdpVersion: 92.0.4515.159, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
+Session ID: 99c48df0ed8d2b436804e473adf8a381
 	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
 	at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
 	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
@@ -778,7 +778,7 @@ Session ID: 3f8531f7dee41b75e2aa5a368c88bb44
             <span class="keyword indention">After</span>
               <span class="location name">AfterActions.tearDown(Scenario)</span>
 
-  <span class="lead-duration duration">0.162</span>
+  <span class="lead-duration duration">0.176</span>
 
           </div>
 
