deploy: b2311864edc31d04ee956a093a40b2922a06205c

--- a/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>08 Dec 2021, 08:34</td>
+      <td>09 Dec 2021, 10:04</td>
     </tr>
   </tbody>
 </table>
@@ -116,138 +116,138 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1751788645">1.751</td>
-              <td class="duration" data-value="1751788645">1.751</td>
-              <td class="duration" data-value="1751788645">1.751</td>
+              <td class="duration" data-value="2032308032">2.032</td>
+              <td class="duration" data-value="2032308032">2.032</td>
+              <td class="duration" data-value="2032308032">2.032</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="319889">0.000</td>
-              <td class="duration" data-value="319889">0.000</td>
-              <td class="duration" data-value="319889">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="118390720">0.118</td>
+              <td class="duration" data-value="118390720">0.118</td>
+              <td class="duration" data-value="118390720">0.118</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="151056294">0.151</td>
-              <td class="duration" data-value="151056294">0.151</td>
-              <td class="duration" data-value="151056294">0.151</td>
+              <td class="duration" data-value="156088922">0.156</td>
+              <td class="duration" data-value="156088922">0.156</td>
+              <td class="duration" data-value="156088922">0.156</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="292534">0.000</td>
-              <td class="duration" data-value="292534">0.000</td>
-              <td class="duration" data-value="292534">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="846807826">0.846</td>
+              <td class="duration" data-value="846807826">0.846</td>
+              <td class="duration" data-value="846807826">0.846</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="103524935046">1:43.524</td>
-              <td class="duration" data-value="103524935046">1:43.524</td>
-              <td class="duration" data-value="103524935046">1:43.524</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="5954143290">5.954</td>
+              <td class="duration" data-value="5954143290">5.954</td>
+              <td class="duration" data-value="5954143290">5.954</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14074340355">14.074</td>
-              <td class="duration" data-value="14074340355">14.074</td>
-              <td class="duration" data-value="14074340355">14.074</td>
+              <td class="duration" data-value="14614754765">14.614</td>
+              <td class="duration" data-value="14614754765">14.614</td>
+              <td class="duration" data-value="14614754765">14.614</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="271347">0.000</td>
-              <td class="duration" data-value="271347">0.000</td>
-              <td class="duration" data-value="271347">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="892256817">0.892</td>
+              <td class="duration" data-value="892256817">0.892</td>
+              <td class="duration" data-value="892256817">0.892</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2347436021">2.347</td>
-              <td class="duration" data-value="2347436021">2.347</td>
-              <td class="duration" data-value="2347436021">2.347</td>
+              <td class="duration" data-value="2355245491">2.355</td>
+              <td class="duration" data-value="2355245491">2.355</td>
+              <td class="duration" data-value="2355245491">2.355</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3772937302">3.772</td>
-              <td class="duration" data-value="3772937302">3.772</td>
-              <td class="duration" data-value="3772937302">3.772</td>
+              <td class="duration" data-value="3787759797">3.787</td>
+              <td class="duration" data-value="3787759797">3.787</td>
+              <td class="duration" data-value="3787759797">3.787</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="278247">0.000</td>
-              <td class="duration" data-value="278247">0.000</td>
-              <td class="duration" data-value="278247">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="443077604">0.443</td>
+              <td class="duration" data-value="443077604">0.443</td>
+              <td class="duration" data-value="443077604">0.443</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="400430">0.000</td>
-              <td class="duration" data-value="400430">0.000</td>
-              <td class="duration" data-value="400430">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3326403351">3.326</td>
+              <td class="duration" data-value="3326403351">3.326</td>
+              <td class="duration" data-value="3326403351">3.326</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="292061">0.000</td>
-              <td class="duration" data-value="292061">0.000</td>
-              <td class="duration" data-value="292061">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="3572969230">3.572</td>
+              <td class="duration" data-value="3572969230">3.572</td>
+              <td class="duration" data-value="3572969230">3.572</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="215240001">0.215</td>
-              <td class="duration" data-value="215240001">0.215</td>
-              <td class="duration" data-value="215240001">0.215</td>
+              <td class="duration" data-value="213604776">0.213</td>
+              <td class="duration" data-value="213604776">0.213</td>
+              <td class="duration" data-value="213604776">0.213</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="201200180">0.201</td>
-              <td class="duration" data-value="201200180">0.201</td>
-              <td class="duration" data-value="201200180">0.201</td>
+              <td class="duration" data-value="197946795">0.197</td>
+              <td class="duration" data-value="197946795">0.197</td>
+              <td class="duration" data-value="197946795">0.197</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="252693">0.000</td>
-              <td class="duration" data-value="252693">0.000</td>
-              <td class="duration" data-value="252693">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="28245243">0.028</td>
+              <td class="duration" data-value="28245243">0.028</td>
+              <td class="duration" data-value="28245243">0.028</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="291757">0.000</td>
-              <td class="duration" data-value="291757">0.000</td>
-              <td class="duration" data-value="291757">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="8739698">0.008</td>
+              <td class="duration" data-value="8739698">0.008</td>
+              <td class="duration" data-value="8739698">0.008</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="337011">0.000</td>
-              <td class="duration" data-value="337011">0.000</td>
-              <td class="duration" data-value="337011">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="39671114569">39.671</td>
+              <td class="duration" data-value="39671114569">39.671</td>
+              <td class="duration" data-value="39671114569">39.671</td>
+              <td class="passed">100.00%</td>
             </tr>
         </tbody>
 
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">7.414</td>
-            <td class="duration">1:43.524</td>
-            <td class="duration">2:6.041</td>
+            <td class="duration">4.601</td>
+            <td class="duration">39.671</td>
+            <td class="duration">1:18.219</td>
             <td>Totals</td>
           </tr>
         </tfoot>
