--- a/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>09 Dec 2021, 10:04</td>
+      <td>10 Dec 2021, 07:52</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="2032308032">2.032</td>
-              <td class="duration" data-value="2032308032">2.032</td>
-              <td class="duration" data-value="2032308032">2.032</td>
+              <td class="duration" data-value="1950097978">1.950</td>
+              <td class="duration" data-value="1950097978">1.950</td>
+              <td class="duration" data-value="1950097978">1.950</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="118390720">0.118</td>
-              <td class="duration" data-value="118390720">0.118</td>
-              <td class="duration" data-value="118390720">0.118</td>
+              <td class="duration" data-value="118043196">0.118</td>
+              <td class="duration" data-value="118043196">0.118</td>
+              <td class="duration" data-value="118043196">0.118</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="156088922">0.156</td>
-              <td class="duration" data-value="156088922">0.156</td>
-              <td class="duration" data-value="156088922">0.156</td>
+              <td class="duration" data-value="156803932">0.156</td>
+              <td class="duration" data-value="156803932">0.156</td>
+              <td class="duration" data-value="156803932">0.156</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="846807826">0.846</td>
-              <td class="duration" data-value="846807826">0.846</td>
-              <td class="duration" data-value="846807826">0.846</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="238862">0.000</td>
+              <td class="duration" data-value="238862">0.000</td>
+              <td class="duration" data-value="238862">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="5954143290">5.954</td>
-              <td class="duration" data-value="5954143290">5.954</td>
-              <td class="duration" data-value="5954143290">5.954</td>
+              <td class="duration" data-value="5828503799">5.828</td>
+              <td class="duration" data-value="5828503799">5.828</td>
+              <td class="duration" data-value="5828503799">5.828</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14614754765">14.614</td>
-              <td class="duration" data-value="14614754765">14.614</td>
-              <td class="duration" data-value="14614754765">14.614</td>
+              <td class="duration" data-value="14682941709">14.682</td>
+              <td class="duration" data-value="14682941709">14.682</td>
+              <td class="duration" data-value="14682941709">14.682</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="892256817">0.892</td>
-              <td class="duration" data-value="892256817">0.892</td>
-              <td class="duration" data-value="892256817">0.892</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="322168">0.000</td>
+              <td class="duration" data-value="322168">0.000</td>
+              <td class="duration" data-value="322168">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2355245491">2.355</td>
-              <td class="duration" data-value="2355245491">2.355</td>
-              <td class="duration" data-value="2355245491">2.355</td>
+              <td class="duration" data-value="2354680803">2.354</td>
+              <td class="duration" data-value="2354680803">2.354</td>
+              <td class="duration" data-value="2354680803">2.354</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3787759797">3.787</td>
-              <td class="duration" data-value="3787759797">3.787</td>
-              <td class="duration" data-value="3787759797">3.787</td>
+              <td class="duration" data-value="3770962801">3.770</td>
+              <td class="duration" data-value="3770962801">3.770</td>
+              <td class="duration" data-value="3770962801">3.770</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="443077604">0.443</td>
-              <td class="duration" data-value="443077604">0.443</td>
-              <td class="duration" data-value="443077604">0.443</td>
+              <td class="duration" data-value="494680703">0.494</td>
+              <td class="duration" data-value="494680703">0.494</td>
+              <td class="duration" data-value="494680703">0.494</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3326403351">3.326</td>
-              <td class="duration" data-value="3326403351">3.326</td>
-              <td class="duration" data-value="3326403351">3.326</td>
+              <td class="duration" data-value="3249378487">3.249</td>
+              <td class="duration" data-value="3249378487">3.249</td>
+              <td class="duration" data-value="3249378487">3.249</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3572969230">3.572</td>
-              <td class="duration" data-value="3572969230">3.572</td>
-              <td class="duration" data-value="3572969230">3.572</td>
+              <td class="duration" data-value="3602132917">3.602</td>
+              <td class="duration" data-value="3602132917">3.602</td>
+              <td class="duration" data-value="3602132917">3.602</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="213604776">0.213</td>
-              <td class="duration" data-value="213604776">0.213</td>
-              <td class="duration" data-value="213604776">0.213</td>
+              <td class="duration" data-value="211859833">0.211</td>
+              <td class="duration" data-value="211859833">0.211</td>
+              <td class="duration" data-value="211859833">0.211</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="197946795">0.197</td>
-              <td class="duration" data-value="197946795">0.197</td>
-              <td class="duration" data-value="197946795">0.197</td>
+              <td class="duration" data-value="202851477">0.202</td>
+              <td class="duration" data-value="202851477">0.202</td>
+              <td class="duration" data-value="202851477">0.202</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="28245243">0.028</td>
-              <td class="duration" data-value="28245243">0.028</td>
-              <td class="duration" data-value="28245243">0.028</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="272834">0.000</td>
+              <td class="duration" data-value="272834">0.000</td>
+              <td class="duration" data-value="272834">0.000</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="8739698">0.008</td>
-              <td class="duration" data-value="8739698">0.008</td>
-              <td class="duration" data-value="8739698">0.008</td>
-              <td class="passed">100.00%</td>
+              <td class="duration" data-value="50046179942">50.046</td>
+              <td class="duration" data-value="50046179942">50.046</td>
+              <td class="duration" data-value="50046179942">50.046</td>
+              <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="39671114569">39.671</td>
-              <td class="duration" data-value="39671114569">39.671</td>
-              <td class="duration" data-value="39671114569">39.671</td>
+              <td class="duration" data-value="50057660941">50.057</td>
+              <td class="duration" data-value="50057660941">50.057</td>
+              <td class="duration" data-value="50057660941">50.057</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">4.601</td>
-            <td class="duration">39.671</td>
-            <td class="duration">1:18.219</td>
+            <td class="duration">8.042</td>
+            <td class="duration">50.057</td>
+            <td class="duration">2:16.727</td>
             <td>Totals</td>
           </tr>
         </tfoot>
