deploy: b2311864edc31d04ee956a093a40b2922a06205c

--- a/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
+++ b/cucumber-reports/rg_bigquery/branch/advanced-reports/cucumber-html-reports/overview-steps.html
@@ -76,7 +76,7 @@ $(document).ready(function() {
     <tr class="info">
       <td>Cucumber Reports</td>
         <td>1</td>
-      <td>10 Dec 2021, 07:52</td>
+      <td>13 Dec 2021, 06:21</td>
     </tr>
   </tbody>
 </table>
@@ -116,137 +116,137 @@ $(document).ready(function() {
             <tr>
               <td class="location">BeforeActions.setUp(Scenario)</td>
               <td>1</td>
-              <td class="duration" data-value="1950097978">1.950</td>
-              <td class="duration" data-value="1950097978">1.950</td>
-              <td class="duration" data-value="1950097978">1.950</td>
+              <td class="duration" data-value="2052938541">2.052</td>
+              <td class="duration" data-value="2052938541">2.052</td>
+              <td class="duration" data-value="2052938541">2.052</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheBigQueryProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="118043196">0.118</td>
-              <td class="duration" data-value="118043196">0.118</td>
-              <td class="duration" data-value="118043196">0.118</td>
+              <td class="duration" data-value="120965053">0.120</td>
+              <td class="duration" data-value="120965053">0.120</td>
+              <td class="duration" data-value="120965053">0.120</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.closeTheGCSProperties()</td>
               <td>1</td>
-              <td class="duration" data-value="156803932">0.156</td>
-              <td class="duration" data-value="156803932">0.156</td>
-              <td class="duration" data-value="156803932">0.156</td>
+              <td class="duration" data-value="158013530">0.158</td>
+              <td class="duration" data-value="158013530">0.158</td>
+              <td class="duration" data-value="158013530">0.158</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.deleteTheTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="238862">0.000</td>
-              <td class="duration" data-value="238862">0.000</td>
-              <td class="duration" data-value="238862">0.000</td>
+              <td class="duration" data-value="190183">0.000</td>
+              <td class="duration" data-value="190183">0.000</td>
+              <td class="duration" data-value="190183">0.000</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheBigQueryPropertiesForTable(String)</td>
               <td>1</td>
-              <td class="duration" data-value="5828503799">5.828</td>
-              <td class="duration" data-value="5828503799">5.828</td>
-              <td class="duration" data-value="5828503799">5.828</td>
+              <td class="duration" data-value="5941256605">5.941</td>
+              <td class="duration" data-value="5941256605">5.941</td>
+              <td class="duration" data-value="5941256605">5.941</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.enterTheGCSPropertiesWithGCSBucket(String)</td>
               <td>1</td>
-              <td class="duration" data-value="14682941709">14.682</td>
-              <td class="duration" data-value="14682941709">14.682</td>
-              <td class="duration" data-value="14682941709">14.682</td>
+              <td class="duration" data-value="14706030473">14.706</td>
+              <td class="duration" data-value="14706030473">14.706</td>
+              <td class="duration" data-value="14706030473">14.706</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.getCountOfNoOfRecordsTransferredToBigQueryIn(String)</td>
               <td>1</td>
-              <td class="duration" data-value="322168">0.000</td>
-              <td class="duration" data-value="322168">0.000</td>
-              <td class="duration" data-value="322168">0.000</td>
+              <td class="duration" data-value="630261743">0.630</td>
+              <td class="duration" data-value="630261743">0.630</td>
+              <td class="duration" data-value="630261743">0.630</td>
               <td class="failed">0.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.linkSourceAndSinkToEstablishConnection()</td>
               <td>1</td>
-              <td class="duration" data-value="2354680803">2.354</td>
-              <td class="duration" data-value="2354680803">2.354</td>
-              <td class="duration" data-value="2354680803">2.354</td>
+              <td class="duration" data-value="2354145933">2.354</td>
+              <td class="duration" data-value="2354145933">2.354</td>
+              <td class="duration" data-value="2354145933">2.354</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openDatafusionProjectToConfigurePipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3770962801">3.770</td>
-              <td class="duration" data-value="3770962801">3.770</td>
-              <td class="duration" data-value="3770962801">3.770</td>
+              <td class="duration" data-value="3776783687">3.776</td>
+              <td class="duration" data-value="3776783687">3.776</td>
+              <td class="duration" data-value="3776783687">3.776</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.openLogs()</td>
               <td>1</td>
-              <td class="duration" data-value="494680703">0.494</td>
-              <td class="duration" data-value="494680703">0.494</td>
-              <td class="duration" data-value="494680703">0.494</td>
+              <td class="duration" data-value="455021798">0.455</td>
+              <td class="duration" data-value="455021798">0.455</td>
+              <td class="duration" data-value="455021798">0.455</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.runThePipelineInRuntime()</td>
               <td>1</td>
-              <td class="duration" data-value="3249378487">3.249</td>
-              <td class="duration" data-value="3249378487">3.249</td>
-              <td class="duration" data-value="3249378487">3.249</td>
+              <td class="duration" data-value="3137038085">3.137</td>
+              <td class="duration" data-value="3137038085">3.137</td>
+              <td class="duration" data-value="3137038085">3.137</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.saveAndDeployPipeline()</td>
               <td>1</td>
-              <td class="duration" data-value="3602132917">3.602</td>
-              <td class="duration" data-value="3602132917">3.602</td>
-              <td class="duration" data-value="3602132917">3.602</td>
+              <td class="duration" data-value="3570831613">3.570</td>
+              <td class="duration" data-value="3570831613">3.570</td>
+              <td class="duration" data-value="3570831613">3.570</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.sourceIsGCSBucket()</td>
               <td>1</td>
-              <td class="duration" data-value="211859833">0.211</td>
-              <td class="duration" data-value="211859833">0.211</td>
-              <td class="duration" data-value="211859833">0.211</td>
+              <td class="duration" data-value="203657318">0.203</td>
+              <td class="duration" data-value="203657318">0.203</td>
+              <td class="duration" data-value="203657318">0.203</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.targetIsBigQuery()</td>
               <td>1</td>
-              <td class="duration" data-value="202851477">0.202</td>
-              <td class="duration" data-value="202851477">0.202</td>
-              <td class="duration" data-value="202851477">0.202</td>
+              <td class="duration" data-value="201835723">0.201</td>
+              <td class="duration" data-value="201835723">0.201</td>
+              <td class="duration" data-value="201835723">0.201</td>
               <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.validateSuccessMessageIsDisplayed()</td>
               <td>1</td>
-              <td class="duration" data-value="272834">0.000</td>
-              <td class="duration" data-value="272834">0.000</td>
-              <td class="duration" data-value="272834">0.000</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="27041180">0.027</td>
+              <td class="duration" data-value="27041180">0.027</td>
+              <td class="duration" data-value="27041180">0.027</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.verifyThePipelineStatusIs(String)</td>
               <td>1</td>
-              <td class="duration" data-value="50046179942">50.046</td>
-              <td class="duration" data-value="50046179942">50.046</td>
-              <td class="duration" data-value="50046179942">50.046</td>
-              <td class="failed">0.00%</td>
+              <td class="duration" data-value="8901588">0.008</td>
+              <td class="duration" data-value="8901588">0.008</td>
+              <td class="duration" data-value="8901588">0.008</td>
+              <td class="passed">100.00%</td>
             </tr>
             <tr>
               <td class="location">GCSBasicDemo.waitTillPipelineIsInRunningState()</td>
               <td>1</td>
-              <td class="duration" data-value="50057660941">50.057</td>
-              <td class="duration" data-value="50057660941">50.057</td>
-              <td class="duration" data-value="50057660941">50.057</td>
+              <td class="duration" data-value="39718652530">39.718</td>
+              <td class="duration" data-value="39718652530">39.718</td>
+              <td class="duration" data-value="39718652530">39.718</td>
               <td class="passed">100.00%</td>
             </tr>
         </tbody>
@@ -255,9 +255,9 @@ $(document).ready(function() {
           <tr>
             <td>17</td>
             <td>17</td>
-            <td class="duration">8.042</td>
-            <td class="duration">50.057</td>
-            <td class="duration">2:16.727</td>
+            <td class="duration">4.533</td>
+            <td class="duration">39.718</td>
+            <td class="duration">1:17.063</td>
             <td>Totals</td>
           </tr>
         </tfoot>
